# SPDX-FileCopyrightText: © 2023 Jinwoo Park (pmnxis@gmail.com)
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "billmock-otp-dev-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["billmock_default"]
billmock_default = ["no_std"]
std = []
no_std = []

[dependencies]
crc = "3.0"
defmt = "0.3"
