# SPDX-FileCopyrightText: © 2023 Jinwoo Park (pmnxis@gmail.com)
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "mp-fingerprint-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
env_to_array = { version = "0.3.1", features = ["hex"] }
elf = "0.7.4"
